Actually quit threads nicely

Summary:
27c0245b1715044cf4d401f1c9d7e7a915a4f3c5 ("[resources] Nicely quit threads")
has no effect as the threads are not running an event loop.
Instead use the QThread::requestInterruption() mechanism.

BUG: 385533

Test Plan:
kactivitymanagerd left a coredump on each logout if kate was opened
before logging out. Now it doesn't do that anymore.

Reviewers: #plasma, ivan, anthonyfieroni

Reviewed By: #plasma, ivan

Subscribers: lbeltrame, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D9998